preliminary work on creating drinks

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,14 @@
   .text-balance {
     text-wrap: balance;
   }
+
+  
 }
 
 .no-scroll {
   overflow: hidden;
+}
+
+.pageTitle {
+  @apply text-2xl font-semibold;
 }
