--- a/app/globals.css
+++ b/app/globals.css
@@ -32,3 +32,34 @@
 .pageTitle {
   @apply text-2xl font-semibold;
 }
+
+/* Input Text Counter */
+.inputLimit {
+  @apply text-xs text-gray-500;
+}
+
+/* Quill Stuff */
+.controls {
+  display: flex;
+  border: 1px solid #ccc;
+  border-top: 0;
+  padding: 10px;
+}
+
+.controls-right {
+  margin-left: auto;
+}
+
+.state {
+  margin: 10px 0;
+  font-family: monospace;
+}
+
+.state-title {
+  color: #999;
+  text-transform: uppercase;
+}
+
+.ql-tooltip {
+  z-index: 999 !important;
+}
