some ux changes to editor

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -3,16 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb      : 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb  : 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb      : 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-end-rgb  : 0, 0, 0;
   }
 }
 
@@ -22,7 +22,7 @@
     text-wrap: balance;
   }
 
-  
+
 }
 
 .no-scroll {
@@ -35,18 +35,29 @@
 
 /* Input Text Counter */
 .inputLimit {
-  @apply text-xs ;
+  @apply text-xs;
 }
 
 /* Quill Stuff */
 .noBorder {
   @apply border-none
 }
+
+#editQuill {
+  .ql-editor {
+    height: 12rem !important;
+  }
+}
+
+.hide-ql-container {
+  display: none;
+}
+
 .controls {
-  display: flex;
-  border: 1px solid #ccc;
+  display   : flex;
+  border    : 1px solid #ccc;
   border-top: 0;
-  padding: 10px;
+  padding   : 10px;
 }
 
 .controls-right {
@@ -54,12 +65,12 @@
 }
 
 .state {
-  margin: 10px 0;
+  margin     : 10px 0;
   font-family: monospace;
 }
 
 .state-title {
-  color: #999;
+  color         : #999;
   text-transform: uppercase;
 }
 
