--- a/app/globals.scss
+++ b/app/globals.scss
@@ -42,10 +42,13 @@
 .noBorder {
   @apply border-none
 }
+#viewOnlyQuill {
+  font-size: 14px;
+}
 
 #editQuill {
   .ql-editor {
-    height: 12rem !important;
+    @apply h-[400px] lg:h-[500px]
   }
 }
 
@@ -76,4 +79,21 @@
 
 .ql-tooltip {
   z-index: 999 !important;
+}
+
+// Martini Loading
+.martini-loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(255,255,255, .4);
+  z-index: 9999;
+}
+.loader-content {
+  text-align: center;
 }
