--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,12 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "./mui_styles.scss";
 
 :root {
   --foreground-rgb      : 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb  : 255, 255, 255;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,8 +23,6 @@
   .text-balance {
     text-wrap: balance;
   }
-
-
 }
 
 .no-scroll {
@@ -31,7 +30,7 @@
 }
 
 .pageTitle {
-  @apply text-2xl font-semibold;
+  @apply text-2xl font-semibold text-emerald-600
 }
 
 /* Input Text Counter */
@@ -43,6 +42,7 @@
 .noBorder {
   @apply border-none
 }
+
 #viewOnlyQuill {
   font-size: 14px;
 }
@@ -84,17 +84,18 @@
 
 // Martini Loading
 .martini-loader {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(255,255,255, .4);
-  z-index: 9999;
+  display         : flex;
+  justify-content : center;
+  align-items     : center;
+  width           : 100vw;
+  height          : 100vh;
+  position        : fixed;
+  top             : 0;
+  left            : 0;
+  background-color: rgba(255, 255, 255, .4);
+  z-index         : 9999;
 }
+
 .loader-content {
   text-align: center;
 }
