get a version of auth working

--- a/app/_mui_styles.scss
+++ b/app/_mui_styles.scss
@@ -15,3 +15,10 @@
         border-color: #059669 !important;
     }
 }
+
+.MuiInput-root {
+
+    &::after {
+        border-bottom: 2px solid #059669 !important;
+    }
+}
