--- a/app/globals.scss
+++ b/app/globals.scss
@@ -7,7 +7,7 @@
   --foreground-rgb      : 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb  : 255, 255, 255;
-  font-size             : 16px;
+  font-size             : 14px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -64,6 +64,9 @@
   .ql-editor {
     @apply h-[300px] lg:h-[300px]
   }
+}
+.ql-editor li  {
+  margin-left: -2em !important;
 }
 
 .hide-ql-container {
