--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -8,7 +8,7 @@
   --foreground-rgb      : 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb  : 255, 255, 255;
-  font-size             : 14px;
+  font-size             : 16px;
 }
 
 // @media (prefers-color-scheme: dark) {
@@ -44,7 +44,7 @@
 }
 
 .pageTitle {
-  @apply text-2xl font-semibold text-emerald-600
+  @apply text-2xl font-semibold text-emerald-600 dark:text-white
 }
 
 /* Input Text Counter */
